feat: implement structure-aware document chunking with image & table support
Backend changes:
- Add DocumentChunkingStrategy interface with router for Open/Closed principle
- Implement 3 parsers: PDFBoxDocumentParser (font-based heading detection), TikaXhtmlDocumentParser (DOCX/Office XHTML), CommonmarkDocumentParser (Markdown AST)
- Add SectionAwareChunker respecting heading boundaries and preserving Markdown tables
- Add DocumentImage entity, repository, and REST endpoint for image serving
- Update DocumentChunk Elasticsearch schema with sectionBreadcrumb and associatedImageIds fields
- Enhance StreamChunkResponse with imageIds in citation events
- Add PDFBox 3.0.5 and Commonmark 0.22.0 dependencies
- Add image storage configuration in RagConfig
- Switch CrossEncoderRerankerAgent from CSV to JSON output format
- Add RerankingScores DTO for structured reranking results
- Add ReformulatedQuery record for query reformulation results

Frontend changes:
- Add imageIds field to Citation model
- Update ChatMessageComponent to render images inline with citations

Testing:
- Fix DocumentProcessingServiceTest with proper Mockito stubs for method overloads
- Update HybridSearchService and LLMReranker tests to match refactored implementation

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>